--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         style: function(feature) {
                             // Finde die Stadt im cities-Objekt und setze die Farbe entsprechend
                             var cityName = feature.properties.shapeName;
-                            var color = "lightgray";  // Standardfarbe, falls die Stadt nicht in der Liste ist
+                            var color = "white";  // Standardfarbe, falls die Stadt nicht in der Liste ist
 
                             // Prüfe, ob eine Stadt im Namen enthalten ist und setze die entsprechende Farbe
                             for (var city in cities) {
